<resources>
    <string name="app_name">TodoList</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_password">Re-Password</string>
    <string name="Register">Register</string>
    <string name="sign_up">Sign up</string>
    <string name="registration">Registration</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="please_enter_your_email">Please enter your email:</string>
    <string name="recover">Recover</string>
    <string name="login">Login</string>
    <string name="emailsent">An email has been sent to your email box</string>
    <string name="item_picture">Item picture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_new_list">Create new list</string>
    <string name="title">Title</string>
    <string name="create">Create</string>
    <string name="share_with_another_user">Share with another user</string>
    <string name="enter_title">Enter title</string>
    <string name="new_task">new Task</string>
    <string name="search">Search</string>
    <string name="delete_button">Delete button</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
</resources>